Update the site privacy notice template
Remove information specific to Aalto University and use phrases
like SYSTEM and ORGANISATION that can be replaced in each site and
organisation.

--- a/templates/privacy_notice_fi.html
+++ b/templates/privacy_notice_fi.html
@@ -1,13 +1,15 @@
+<b>TÄMÄ ON ESIMERKKIPOHJA, JOTA KUNKIN ORGANISAATION TULEE TÄYDENTÄÄ JA KORJATA VASTAAMAAN OMAA YMPÄRISTÖÄÄN.</b>
+
 <h3>Palvelun kuvaus</h3>
 
 <p>
-A+ on hajautettu sähköinen opiskelualusta ja
+JÄRJESTELMÄN NIMI on hajautettu sähköinen opiskelualusta ja
 kurssinhallintajärjestelmä. Järjestelmän käyttäjiä ovat opiskelijat ja
 opettajat.
 </p>
 <p>
-A+:n avulla opettajat voivat hallinnoida kursseja ja kursseihin
-liittyviä harjoituksia. Lisäksi A+ mahdollistaa
+Järjestelmän avulla opettajat voivat hallinnoida kursseja ja kursseihin
+liittyviä harjoituksia. Lisäksi järjestelmä mahdollistaa
 ulkoisissa järjestelmissä olevien harjoitustehtävien liittämisen
 kurssille ilman, että ulkoisiin järjestelmiin joudutaan
 konfiguroimaan tai tallentamaan kurssiin liittyviä tietoja, kuten
@@ -21,29 +23,25 @@ tehtävien palauttamiseen ja tehtävistä saadun palautteen tarkasteluun.
 
 <h3>Tietosuojaseloste</h3>
 
-<h4>Yhdistetty rekisteriseloste- ja informointiasiakirja</h4>
-
 <p>
 Henkilötietolaki (523/1999) 10 § ja 24 §
 </p>
 
 <dl>
-    <dt>Rekisterin nimi</dt>
-    <dd>A+ käyttäjärekisteri</dd>
-    <dt>Rekisterinpitäjä</dt>
+    <dt>1. Rekisterinpitäjä</dt>
     <dd>
-        Aalto Yliopisto, Tietotekniikan laitos<br />
-        PL 15400 <br />
-        00076 AALTO
+        ORGANISAATION NIMI<br>
+        POSTIOSOITE<br>
+        PUHELINNUMERO
     </dd>
-    <dt>Rekisteriasioita hoitava henkilö</dt>
+    <dt>2. Yhteyshenkilö rekisteriä koskevissa asioissa</dt>
     <dd>
-        Otto Seppälä<br />
-        <a href="https://people.aalto.fi/otto_seppala">
-            https://people.aalto.fi/otto_seppala
-        </a>
+        YHTEYSHENKILÖ TAI VASTUUORGANISAATIO<br>
+        YHTEYSTIEDOT, SÄHKÖPOSTIOSOITE
     </dd>
-    <dt>Henkilötietojen käsittelyn tarkoitus</dt>
+    <dt>3. Rekisterin nimi</dt>
+    <dd>JÄRJESTELMÄN käyttäjärekisteri</dd>
+    <dt>4. Henkilötietojen käsittelyn tarkoitus</dt>
     <dd>
         Henkilötietoja käytetään opiskelijoille ja opettajille tarjotun
         palvelun käyttöoikeuksien hallintaan, palvelun edellyttämien
@@ -51,55 +49,78 @@ Henkilötietolaki (523/1999) 10 § ja 24 §
         opetuksen kehittämiseen. Lisäksi henkilötietoja käytetään palvelimen
         ja tietoliikenteen kapasiteetin seurantaan, teknisten ongelmien ja
         väärinkäytösten selvittämiseen sekä palvelun edelleenkehittämiseksi.
+        Järjestelmän eräänä keskeisenä tehtävänä on harjoitustehtävien
+        tekeminen ja automaattinen tarkastaminen. Opiskelija näkee omat
+        tehtäväkohtaiset suorituksensa ja pisteensä. Opetushenkilökunta
+        käsittelee opiskelijan tietoja opintosuoritusten arvioinnissa.
+        Lisäksi tietoja käsitellään ao. laitoksella tutkimuksessa ja
+        tilastollisesti opetuksen kehittämistä varten.
     </dd>
-    <dt>Käsiteltävät henkilötiedot</dt>
+    <dt>5. Rekisterin tietosisältö</dt>
     <dd>
-        <em>Käyttäjän perustiedot:</em><br />
-        Käyttäjän nimi, käyttäjätunnus, opiskelijanumero, sähköpostiosoite,
-        kieli ja kotiorganisaatio noudetaan kotiorganisaatiosi suostumuksella
-        aina, kun kirjaudut palveluun Aalto-tunnuksillasi.<br />
-        <em>Käytöstä syntyvät tiedot:</em><br />
-        Käyttäjien palveluun lataamat tiedot, kuten käyttöliittymän kieliasetus
-        ja tehtävien ratkaisujen palautukset ja niistä saatu palaute.
+        <em>Perustiedot:</em> nimi, käyttäjätunnus, sähköpostiosoite.
+        ORGANISAATION opiskelijoista lisäksi:
+        opiskelijanumero, korkeakoulu, läsnäolotieto, ilmoittautuminen
+        kurssille ja hyväksymisvuosi opiskelijaksi.<br>
+        <em>Suoritustiedot:</em> opiskelijan kaikki tehtäväkohtaiset vastaukset
+        ja vastausyritykset aikaleimoineen sekä tehtävien pisteytys.
+        Suoritustiedot ovat salassapidettäviä (JulkL 24 § 1 mom 30 kohta).
     </dd>
-    <dt>Käyttäjän koneelle tallennettavat tiedot</dt>
+    <dt>6. Säännönmukaiset tietolähteet</dt>
     <dd>
-        Palvelu tallettaa käyttäjän selaimelle käyttäjän tunnistamiseen ja
-        käyttökokemuksen parantamiseen liittyvää tietoa. Käyttäjä voi
-        halutessaan kieltää näiden tietojen tallentamisen estämällä evästeiden
-        ja local-storage selain-tietokannan käytön selaimensa asetuksista.
-        Tällöin palvelu ei kuitenkaan enää toimi täydellisesti.
+        1) Haka-federaatio<br>
+        2) ORGANISAATION opiskelijatietorekisteristä opiskelijoiden perustiedot<br>
+        3) Opiskelijoiden järjestelmään palauttamat tehtävien ratkaisut
     </dd>
-    <dt>Henkilötietojen säännönmukainen luovuttaminen</dt>
+    <dt>7. Tietojen säännönmukaiset luovutukset</dt>
     <dd>
-        Kunkin kurssin opettajalla on pääsy oman kurssinsa opiskelijoiden
-        tietoihin ja lisäksi kurssin opettaja voi määritellä (automaattiseen)
-        arviointiin käytettäviä palveluita, jonne A+ välittää opiskelijoiden
-        palauttamat harjoitustyöt ja joista A+ kerää harjoitustöihin liittyvän
-        palautteen. Rekisteri ei välitä Aalto-login kirjautumisen yhteydessä
-        kerättyjä henkilötietoja opettajan määrittelemiin Aallon ulkopuolisiin
-        palveluihin tai muille kolmansille osapuolille.
+        Henkilötietoja ei säännönmukaisesti luovuteta ao. laitoksen
+        ulkopuolelle. Henkilötietoja voidaan käsitellä ja luovuttaa
+        tieteellistä tutkimusta, tilastointia ja suunnittelu- ja
+        selvitystehtäviä varten julkisuuslaissa ja henkilötietolaissa
+        säädetyillä edellytyksillä.
     </dd>
-    <dt>Rekisterin suojauksen periaatteet</dt>
+    <dt>8. Tietojen siirto EU:n tai ETA:n ulkopuolelle</dt>
     <dd>
-        Henkilötietoja käsitellään luottamuksellisesti. Rekisteri on suojattu
-        ulkopuolisilta asianmukaisilla teknisillä suojakeinoilla. Tietoverkossa
-        siirrettäessä henkilötiedot on suojattu SSL-tekniikalla mikäli käyttäjä
-        käyttää https-protokollaa. Rekisteriä ei säilytetä paperitulosteena.
-        Rekisteriä käyttävät ainoastaan henkilöt, joiden toimenkuvaan sen
-        käyttö kuuluu. Jokaisella rekisterin käyttäjällä on henkilökohtainen
-        käyttäjätunnus ja salasana.
+        Henkilötietoja ei siirretä EU/ETA-alueen ulkopuolelle ilman
+        rekisteröidyn yksiselitteistä suostumusta.
     </dd>
-    <dt>Tarkastusoikeus</dt>
+    <dt>9. Rekisterin suojauksen periaatteet</dt>
     <dd>
-        Tarkistaaksesi, mitä henkilötietoja sinusta on tallennettu, ota yhteys
-        em. yhteyshenkilöön.
+        A) Manuaalinen aineisto: Ei ole.<br>
+        B) ATK:lla käsiteltävät tiedot:
+        Rekisteritietoja ei säilytetä muussa kuin sähköisessä muodossa.
+        Verkon yli siirrettäessä tiedot suojataan SSL-tekniikalla.
+        Rekisterin palvelinlaitteistot sijaitsevat varmistetuissa
+        konesalitiloissa, jonne pääsy on rajoitettu atk-ylläpitäjiin.
+        Pääsy rekisteritietoja sisältävään tietokantaan on rajoitettu sekä
+        verkkotekniikan keinoin että käyttäjätunnuksien ja salasanojen avulla.
+        Rekisterin ylläpito-oikeus on ainoastaan järjestelmän pääkäyttäjillä.
+        Tietoja ylläpitävät projektihenkilöstö ja käyttäjät itse.
+        Henkilötietoja säilytetään toistaiseksi kunnes rekisterin
+        käyttötarkoitus lakkaa.
     </dd>
-    <dt>Virheellisten tietojen oikaisu</dt>
+    <dt>10. Tarkastusoikeus</dt>
     <dd>
-        Ota yhteys kotiorganisaatioosi, mikäli kirjautumisen yhteydessä
-        kotiorganisaatiostasi noudettavissa henkilötiedoissa on virheitä.
-        Palvelun sinulta itseltäsi keräämät henkilötiedot oikaistaan ottamalla
-        yhteys em. rekisteriasioita hoitavaan henkilöön.
+        Rekisteröity voi tarkastaa avoinna olevaan kurssiin liittyvät
+        tietonsa itse www-käyttöliittymän kautta. Tämän jälkeen tietoja
+        pääsee tarkastelemaan esittämällä kirjallinen pyyntö asiasta
+        rekisterin yhteyshenkilölle.
+    </dd>
+    <dt>11. Oikeus vaatia tiedon korjaamista</dt>
+    <dd>
+        Ota yhteys kotiorganisaatioosi, mikäli kirjautumisen yhteydessä
+        kotiorganisaatiostasi noudettavissa henkilötiedoissa on virheitä.
+        Palvelun sinulta itseltäsi keräämät henkilötiedot oikaistaan
+        ottamalla yhteys em. rekisteriasioita hoitavaan henkilöön.
+        Pyyntö tiedon korjaamisesta tulee tehdä kirjallisesti
+        rekisterinpitäjälle ja se osoitetaan rekisterin vastuuhenkilölle
+        (osoite yllä).
+    </dd>
+    <dt>12. Muut henkilötietojen käsittelyyn liittyvät oikeudet</dt>
+    <dd>
+        Rekisteröity voi pyytää tietojensa poistamista rekisteristä
+        erillisellä kirjallisella pyynnöllä sen jälkeen kun ORGANISAATION
+        yleinen opintosuorituksille määrätty vähimmäissäilytysaika on päättynyt.
     </dd>
 </dl>
