Add search functionalty
Seaching content in A+ is difficult, therefore, we need to add a search
box to allows user to find the content more effectivelly

--- a/assets/sass/legacy/_main.scss
+++ b/assets/sass/legacy/_main.scss
@@ -1,6 +1,10 @@
 @import '../mixins/focus';
 
 /* common */
+span.highlighted {
+    background-color: #FFBF47;
+}
+
 .site-message {
   position: relative;
 }
