--- a/templates/base.html
+++ b/templates/base.html
@@ -38,6 +38,13 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/1.5.12/clipboard.min.js"></script>
 
 	<script src="{% static 'js/translate.min.js' %}"></script>
+	<script
+	rel="preload"
+	type="text/javascript"
+	src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.12.0/underscore-min.js"
+	integrity="sha512-BDXGXSvYeLxaldQeYJZVWXJmkisgMlECofWFXKpWwXnfcp/R708nrs/BtNLH5cb/5TE7aeYRTDBRXu6kRL4VeQ=="
+	crossorigin="anonymous"
+	as="script"></script>
 
 	{% if is_teacher %}
 	<link data-translation rel="preload" as="fetch" crossorigin="anonymous"
