--- a/course/templates/course/course_base.html
+++ b/course/templates/course/course_base.html
@@ -2,6 +2,8 @@
 {% load i18n %}
 {% load base %}
 {% load course %}
+{% load static %}
+{% load external_services %}
 
 {% block scripts %}
 {{ block.super }}
@@ -11,6 +13,25 @@
 {% for url in instance.head_js_urls %}
 <script src="{{ url }}"></script>
 {% endfor %}
+
+{% get_setting "GRADER" as grader_url%}
+<script type="text/javascript">
+	var DOCUMENTATION_OPTIONS = {
+	  URL_ROOT:    '{{ grader_url }}/default/',
+	  VERSION:     '0.1.1-beta',
+	  COLLAPSE_INDEX: true,
+	  FILE_SUFFIX: '',
+	  HAS_SOURCE:  true,
+	  SOURCELINK_SUFFIX: '.txt'
+	};
+</script>
+<script type="text/javascript" src="{% static 'js/doctools.js' %}" ></script>
+<script type="text/javascript" src="{% static 'js/searchtools.js' %}" ></script>
+<script type="text/javascript" >
+	jQuery(function() { Search.loadIndex("http://localhost:8080/static/default/searchindex.js"); });
+</script>
+<script type="text/javascript" id="searchindexloader"></script>
+
 {% endblock %}
 
 {% block container_opening_tag %}
@@ -32,7 +53,17 @@
 
 {% block content %}
 <div data-taggings="{{ get_taggings|join:' ' }}"  class="row">
-	<div class="col-sm-2 hidden-xs">
+    <div class="col-sm-2 hidden-xs">
+		<div id="searchbox" role="search">
+			<h4>{{ 'Quick search' }}</h4>
+				<form class="search form-inline"
+				action="{{ instance|url:'search'}}" method="get">
+					<div class="form-group">
+						<input type="text" name="q" />
+					</div>
+				<button class="btn btn-default btn-sm" type="submit" value="Go" />Go</button>
+				</form>
+		</div>
 		<nav class="course-menu" id="main-course-menu" aria-labelledby="course-menu-heading">
 			<ul class="nav nav-pills nav-stacked">
 				{% include "course/_course_menu.html" %}
