Fix issues related to the SITEWIDE_ADVERT and the new window icon
* Remove extra icon (icon.glyphicon.glyphicon-new-window) added to the
SITEWIDE_ADVERT in course_base.html page
* Fix position of the icon (icon.glyphicon.glyphicon-new-window) in the
index.html page

Fixes #749

--- a/assets/sass/components/_frontpage-cards.scss
+++ b/assets/sass/components/_frontpage-cards.scss
@@ -67,6 +67,7 @@
 		}
 	}
 	.advert-card {
+		position: relative;
 		background-color: #d9edf7;
 		border-color: #bce8f1;
 		&:hover {
@@ -76,6 +77,11 @@
 			p {
 				color: #333;
 			}
+		}
+		> a > i.icon.glyphicon.glyphicon-new-window {
+			position: absolute;
+			top: 92%;
+			left: 92%;
 		}
 	}
 	a {
