Add a hidden link to open exercises in a new tab / full-page
Aplus does not support keyboard navigation for modal windows, and all
the current exercises use modal windows for different tasks, e.g., show
model response, inspect submission among other tasks. Therefore, the
exercises must be opened in full-page for users who use keyboard
navigation.

We added hidden links that are shown only when the user
navigates the course with the keyboard.

Fixes #669

--- a/exercise/templates/exercise/exercise_plain.html
+++ b/exercise/templates/exercise/exercise_plain.html
@@ -37,6 +37,9 @@
     </head>
     <body>
         <div id="exercise-all">
+            <a href="{{ exercise|url:'exercise' }}" target="_blank" rel="noopener" class="skip-link">
+                {% trans "Open this exercise in a new tab (recommended for keyboard and assistive technology users)" %}
+            </a>
             <div class="overlay-parent">
 
                 {% if issues and not submission_allowed %}
