--- a/templates/accessibility_issues_fi.html
+++ b/templates/accessibility_issues_fi.html
@@ -1,17 +1,23 @@
 <h2>Tunnetut ongelmat</h2>
 <p>Tämän sivun tiedot koskevat A+-alustaa sellaisena kuin se tarjotaan. A+-alustaa käyttävät instituutiot kuten myös kurssisisällön tuottajat (opettajat) kykenevät vapaasti muokkaamaan sisältöään ja sen ulkoasua, mikä voi muuttaa tässä kuvattua saavutettavuusvaatimusten noudattamista.</p>
+<p>Huomaa, että A+ vaatii JavaScriptin tukea web-selaimessa. Erityisesti lukumateriaaliin upotetut tehtävät riippuvat JavaScript-tuesta, jotta tehtävät avautuvat oikein.</p>
 <p>Nykytilanteessa A+ täyttää osittain saavutettavuusvaatimukset. Lisäparannuksia vaaditaan, erityisesti seuraavissa toiminnallisuuksissa:</p>
 <ul>
-	<li>Joihinkin palvelun osiin ei pääse pelkällä näppäimistöllä.</li>
-	<li>Valittuna oleva sivun osa (fokuksen tila) ei usein erotu riittävän selkeästi.</li>
-	<li>Joissakin käyttöliittymän osissa värien kontrasti on liian alhainen.</li>
-	<li>Joistakin käyttöliittymän osista (erityisesti lomakkeissa) puuttuvat nimilaput tai nimilaput ovat epäselviä.</li>
-	<li>Sivunäkymän toistuvia osia (erityisesti navigaatiota) ei voi ohittaa eli ohituslinkit puuttuvat.</li>
-	<li>Tekstin kokoa ei voi luotettavasti muuttaa selainasetuksista.</li>
+	<li>
+		<strong>Joihinkin palvelun osiin ei pääse pelkällä näppäimistöllä.</strong>
+		Erityisesti lukumateriaaliin upotetut tehtävät riippuvat modaalisista dialogeista, joita ei aina voi helposti käyttää pelkällä näppäimistöllä.
+		Dialogeissa esitetään tehtäväpalautuksen arvostelun palaute.
+		Tehtävät voi kuitenkin aina avata omalla erillisellä sivullaan, joka ei sisällä modaalisia dialogeja.
+		Erillisellä sivulla arvostelun palautteen voi avata helposti näppäimistöllä.
+		Erillisen sivun voi avata lukumateriaalin sivulta, kun navigoit upotetun tehtävän kehyksen kohdalle.
+		Linkki erilliselle sivulle sijaitsee kehyksen yläpuolella ja se tulee näkyville vasta kun se on fokusoitu näppäimistöllä.
+	</li>
+	<li><strong>Joistakin käyttöliittymän osista (erityisesti lomakkeissa) puuttuvat nimilaput tai nimilaput ovat epäselviä.</strong> Erityisesti tehtävien tiedostolatauslomakkeissa ei välttämättä ole uniikkeja ID-attribuutteja.</li>
+	<li><strong>Linkeissä on väärä rooli.</strong> Erityisesti kurssin etusivulla on linkki (teksti "Näytä vanhemmat tehtävät"), joka paljastaa vanhat kurssimoduulit. Linkillä pitäisi olla painikkeen rooli, koska se muokkaa saman sivun näkyvää sisältöä.</li>
+	<li><strong>Tekstin kokoa ei voi luotettavasti muuttaa selainasetuksista.</strong> Ainakin kurssisivun Pistetilanne-osion pistetaulukon sisältö vuotaa taulukon ulkopuolelle, kun tekstin kokoa kasvattaa selaimen asetuksista.</li>
 	<li>Sisällön osien kieltä ei aina pysty määrittelemään ohjelmallisesti. (Koko sivun kielen yleensä pystyy määrittelemään.)</li>
 </ul>
 
 <p>Lisätietoja on saatavilla <a href="https://apluslms.github.io/accessibility-audit/">itsearvion raportissa</a>, joka tehtiin kesällä 2020. </p>
-<p>Suurin osa tunnetuista ongelmista korjataan alustan seuraavassa versiossa, jonka julkaisu on suunniteltu vuoden 2021 alkuun.</p>
 <p>Korjaamme havaitut ongelmat viipymättä.</p>
-<p>Tämä tiivistelmä luotiin elokuussa 2020.</p>
+<p>Tämä tiivistelmä päivitettiin viimeksi tammikuussa 2021.</p>
