--- a/templates/institution_accessibility_text_en.html
+++ b/templates/institution_accessibility_text_en.html
@@ -1,5 +1,5 @@
 <p class="lead">We are subject to the EU's accessibility directive, the aim of which is to ensure equality in a digitalised society and set uniform requirements for accessibility.</p>
-<p>The site's current accessibility standard is WCAG 2.1, level AA. The requirements of the Directive have been taken into account in the development of the website, and the work continues. The information in this statement is based on self-assessment carried out in the summer of 2020.</p>
+<p>The site's current accessibility standard is WCAG 2.1, level AA. The requirements of the Directive have been taken into account in the development of the website, and the work continues. The information in this statement is based on self-assessment carried out in the summer of 2020. It has been updated after new platform releases.</p>
 <p>We are committed to observing accessibility standards. The following measures are implemented in order to achieve this goal:</p>
 <ul>
 	<li>accessibility is part of our mission statement</li>
@@ -9,3 +9,4 @@
 </ul>
 
 <p>If you notice any deficiencies regarding the accessibility of the site beyond those listed below, you can provide feedback.</p>
+<p>We will respond to your feedback within two weeks, at the latest.</p>
