--- a/templates/institution_accessibility_text_fi.html
+++ b/templates/institution_accessibility_text_fi.html
@@ -1,5 +1,5 @@
 <p class="lead">Meidän tulee noudattaa EU:n saavutettavuusdirektiiviä, jonka tarkoituksena on taata kaikille tasavertaiset mahdollisuudet käyttää digitaalisia palveluita ja asettaa yhtenäiset vaatimukset saavutettavuudelle.</p>
-<p>Sivuston saavutettavuuden nykyinen taso on WCAG 2.1, taso AA. Direktiivin vaatimukset on huomioitu web-sivuston kehityksessä ja kehitystyö jatkuu edelleen. Tämän selosteen saavutettavuusarvion tiedot perustuvat itsearvioon, joka tehtiin kesällä 2020.</p>
+<p>Sivuston saavutettavuuden nykyinen taso on WCAG 2.1, taso AA. Direktiivin vaatimukset on huomioitu web-sivuston kehityksessä ja kehitystyö jatkuu edelleen. Tämän selosteen saavutettavuusarvion tiedot perustuvat itsearvioon, joka tehtiin kesällä 2020. Selostetta on päivitetty alustan versiopäivitysten yhteydessä.</p>
 <p>Me olemme sitoutuneet seuraamaan saavutettavuusstandardeja. Toteutamme saavutettavuusvaatimusten edellyttämät toimenpiteet seuraavasti:</p>
 <ul>
 	<li>saavutettavuus kuuluu arvoihimme</li>
@@ -9,3 +9,13 @@
 </ul>
 
 <p>Lähetä palautetta meille eli tämän sivuston ylläpitäjille, jos huomaat sivustolla muita kuin alla listattuja saavutettavuusongelmia.</p>
+<p>Vastaamme palautteeseen 14 vuorokauden sisällä.</p>
+<p>Voit tehdä ilmoituksen Etelä-Suomen aluehallintovirastoon, jos et ole tyytyväinen saamaasi vastaukseen tai et saa vastausta lainkaan kahden viikon aikana. Etelä-Suomen aluehallintoviraston (ESAVI) sivulla kerrotaan tarkasti, miten ilmoituksen voi tehdä ja miten asia käsitellään.</p>
+<p>
+Valvontaviranomaisen yhteystiedot:<br>
+Etelä-Suomen aluehallintovirasto<br>
+Saavutettavuuden valvonnan yksikkö<br>
+<a href="https://www.saavutettavuusvaatimukset.fi/" rel="external noopener">www.saavutettavuusvaatimukset.fi</a><br>
+<a href="mailto:saavutettavuus@avi.fi">saavutettavuus(at)avi.fi</a><br>
+puhelinnumero vaihde 0295 016 000<br>
+</p>
