--- a/exercise/templates/exercise/staff/user_results.html
+++ b/exercise/templates/exercise/staff/user_results.html
@@ -70,7 +70,7 @@
   </a>
   {% endfor %}
   &nbsp;
-  {% tags student.userprofile instance %}
+  {% tags student.userprofile instance instance_usertags %}
 </p>
 
 {% user_results student %}
