--- a/course/templates/course/_profiles.html
+++ b/course/templates/course/_profiles.html
@@ -15,6 +15,6 @@
     {{ p.user.get_full_name }}
     ({% if p.student_id %}{{ p.student_id }}{% else %}{{ p.user.username }}{% endif %})
   </a>
-  {% tags p instance %}
+  {% tags p instance instance_usertags %}
 </div>
 {% endfor %}
