--- a/course/templates/course/staff/group_delete.html
+++ b/course/templates/course/staff/group_delete.html
@@ -30,7 +30,7 @@
       <tbody>
         <tr>
           <td>{{ group.id }}</td>
-          <td>{% profiles group.members.all instance is_teacher %}</td>
+          <td>{% profiles group.members.all instance is_teacher instance_usertags %}</td>
           <td>{{ group.timestamp }}</td>
         </tr>
       </tbody>
