--- a/templates/support_channels.html
+++ b/templates/support_channels.html
@@ -5,23 +5,82 @@
 {% brand_name_long as brand_long %}
 {% brand_institution_name as institution %}
 
-<section class="frontpage frontpage-section" aria-label="Students">
-	<h2 >
-		{% blocktrans %}Students{% endblocktrans%}
+<section class="frontpage frontpage-section" aria-labelledby="students-title">
+	<h2 id="students-title">
+		{% trans "Students" %}
 	</h2>
-	<h3>{% trans "Students should contact the course staff for further assistance on course matters." %}</h3>
+	<p>
+		{% blocktrans trimmed %}
+		Students should contact the course staff for further assistance on
+		course matters. If there are technical issues in the course materials,
+		contact the course staff. Check the course page for the contact information.
+		Typically, email is <strong>not</strong> the primary discussion
+		channel in courses.
+		{% endblocktrans %}
+	</p>
 	<div class="cards">
 		<div class="card frontpage">
 			<div class="card-body">
-				<h3>{% blocktrans %} {{institution}} information{% endblocktrans %}</h3>
+				<h3>{% trans "Studies" %}</h3>
 				<p class="card-text">
 					<a target="_blank" rel="noopener" href="https://into.aalto.fi/display/enopinnot">
-						{% blocktrans %} Studies {% endblocktrans %}
+						{% trans "Studies" %}
 					</a>
 				</p>
 				<p class="card-text">
-					<a target="_blank" rel="noopener" href="https://into.aalto.fi/display/enopinnot">
-						{% blocktrans %} Student Services {% endblocktrans %}
+					<a target="_blank" rel="noopener" href="https://courses.aalto.fi">
+						{% trans "Course catalogue" %}
+					</a>
+				</p>
+				<p class="card-text">
+					<a target="_blank" rel="noopener" href="https://into.aalto.fi/display/enopisk/Student+services">
+						{% trans "Student services" %}
+					</a>
+				</p>
+				<p class="card-text">
+					<a target="_blank" rel="noopener" href="https://into.aalto.fi/display/enopisk/Support+for+studying">
+						{% trans "Support for studying" %}
+					</a>
+				</p>
+				<p class="card-text">
+					<a target="_blank" rel="noopener" href="https://into.aalto.fi/display/enopisk/Study+skills">
+						{% trans "Study skills" %}
+					</a>
+				</p>
+				<p class="card-text">
+					<a target="_blank" rel="noopener" href="https://into.aalto.fi/display/enopisk/Starting+Point+of+Wellbeing">
+						{% trans "Starting Point of Wellbeing" %}
+					</a>
+				</p>
+			</div>
+		</div>
+
+		<div class="card frontpage">
+			<div class="card-body">
+				<h3>{% trans "IT support" %}</h3>
+				<p class="card-text">
+					<a target="_blank" rel="noopener" href="https://www.aalto.fi/en/it-help">
+						{% trans "IT help" %}
+					</a>
+				</p>
+				<p class="card-text">
+					<a target="_blank" rel="noopener" href="https://vdi.aalto.fi/">
+						{% trans "Virtual desktops (VDI)" %}
+					</a>
+				</p>
+				<p class="card-text">
+					<a target="_blank" rel="noopener" href="https://computers.aalto.fi/">
+						{% trans "Available classroom computers" %}
+					</a>
+				</p>
+				<p class="card-text">
+					<a target="_blank" rel="noopener" href="https://download.aalto.fi">
+						{% trans "Download licensed software" %}
+					</a>
+				</p>
+				<p class="card-text">
+					<a target="_blank" rel="noopener" href="https://www.aalto.fi/en/services/aalto-space-mobile-application">
+						{% trans "Aalto Space app for room reservations" %}
 					</a>
 				</p>
 			</div>
@@ -29,9 +88,9 @@
 	</div>
 </section>
 <hr>
-<section class="frontpage frontpage-section" aria-label="Teachers">
-	<h2>
-		{% blocktrans %}Teachers{% endblocktrans%}
+<section class="frontpage frontpage-section" aria-labelledby="teachers-title">
+	<h2 id="teachers-title">
+		{% trans "Teachers" %}
 	</h2>
 	<div class="cards">
 		<div class="card frontpage">
@@ -39,34 +98,41 @@
 				<h3>{% trans "Documentation" %}</h3>
 				<p class="card-text">
 					<a target="_blank" rel="noopener" href="https://plus.cs.aalto.fi/aplus-manual/master/">
-						{% blocktrans %}{{brand_long}} manual{% endblocktrans %}
+						{% blocktrans trimmed %}{{ brand_long }} manual{% endblocktrans %}
 					</a>
 				</p>
 				<p class="card-text">
-					{% blocktrans %}
-					The {{brand_long}} manual contains detailed instructions on how to start authoring a course and how
-					to use the various types of exercises available for {{brand}}.{% endblocktrans %}
+					{% blocktrans trimmed %}
+					The {{ brand_long }} manual contains detailed instructions on how to start authoring a course and how
+					to use the various types of exercises available for {{ brand }}.
+					{% endblocktrans %}
 				</p>
 				<p class="card-text">
-					<a target="_blank" rel="noopener" href="https://apluslms.github.io/">{% trans "Aplus website" %}</a>
+					<a target="_blank" rel="noopener" href="https://apluslms.github.io/">{% trans "A+ LMS project website" %}</a>
 				</p>
 				<p class="card-text">
-					{% blocktrans %}
-					The {{brand_long}} website provide an overview of {{brand_long}} and all the associated services. It
-					also contain links to technical documentation especially the documentation hosted in Github.
+					{% blocktrans trimmed %}
+					The A+ LMS website provides an overview of the project and all the associated services as well as a quick start guide.
+					It also contains links to technical documentation for platform developers.
 					{% endblocktrans %}
 				</p>
 				<p class="card-text">
 					<a target="_blank" rel="noopener"
 						href="https://wiki.aalto.fi/display/EDIT/Requests+for+course+instances">
-						{% trans "How to publish a course" %}
+						{% trans "Request a new course instance in the server" %}
 					</a>
 				</p>
 				<p class="card-text">
-					{% blocktrans %}
-					The Wiki page "How to publish a course" contains instructions for requesting a new course instance
-					in {{brand}}.
-					{% endblocktrans %}
+					<a target="_blank" rel="noopener"
+						href="https://wiki.aalto.fi/display/EDIT/Instructions+and+support+for+teachers+and+TAs+at+CS+department">
+						{% blocktrans trimmed %}Instructions at {{ institution }}{% endblocktrans %}
+					</a>
+				</p>
+				<p class="card-text">
+					{% trans "Contact support by email:" %}
+					<a rel="noopener" href="mailto:aplusguru@cs.aalto.fi" style="display: inline;">
+						aplusguru@cs.aalto.fi
+					</a>
 				</p>
 			</div>
 		</div>
@@ -76,23 +142,25 @@
 				<h3>{% trans "Download course templates" %}</h3>
 				<p class="card-text">
 					<a target="_blank" rel="noopener" href="https://github.com/apluslms/aplus-course-template">
-						{% trans "Aplus course template" %}</a>
+						{% trans "Aplus course template" %}
+					</a>
 				</p>
 				<p class="card-text">
-					{% blocktrans %}
-					The {{brand_long}} course template provides you with a the minimum structure to start authoring your
-					course.
+					{% blocktrans trimmed %}
+					The {{ brand_long }} course template provides you with
+					the minimum structure to start authoring your course.
 					{% endblocktrans %}
 				</p>
 				<p class="card-text">
 					<a target="_blank" rel="noopener" href="https://github.com/apluslms/aplus-manual">
-						{% blocktrans %}{{brand_long}} manual{% endblocktrans %}
+						{% blocktrans trimmed %}{{ brand_long }} manual{% endblocktrans %}
 					</a>
 				</p>
 				<p class="card-text">
-					{% blocktrans %}
-					Since the {{brand_long}} Manual contains a wide variety of exercises, you can download the source
+					{% blocktrans trimmed %}
+					Since the {{ brand_long }} manual contains a wide variety of exercises, you can download the source
 					code and use it as a source of knowledge for creating your own exercises.
+					You may run the manual course in your own computer with the Docker containers.
 					{% endblocktrans %}
 				</p>
 			</div>
@@ -108,21 +176,22 @@
 					</a>
 				</p>
 				<p class="card-text">
-					{% blocktrans %}
-					Teachers can start conversation with other users of {{brand}} or ask for support in the Microsoft
-					Teams channels. However, if your matter contains private/sensitive information you should contact us
-					by email.
+					{% blocktrans trimmed %}
+					Teachers can start a conversation with other users of {{ brand }} or ask for support in the Microsoft
+					Teams channel. However, if your matter contains private or sensitive information, you should contact
+					us by email.
 					{% endblocktrans %}
 				</p>
 				<p class="card-text">
 					<a target="_blank" rel="noopener" href="https://github.com/apluslms/a-plus/issues">
-						{% trans "Report an issue in Github" %}
+						{% trans "Report an issue in GitHub" %}
 					</a>
 				</p>
 				<p class="card-text">
-					{% blocktrans %}
-					Teachers can report issues in Github, such as bugs in the application or features you would like
-					to have in future version of {{brand}}.
+					{% blocktrans trimmed %}
+					Teachers may report issues in GitHub, such as bugs in the application or
+					ideas for new features. If you want to discuss with the support team
+					more personally or in privacy, send us email.
 					{% endblocktrans %}
 				</p>
 			</div>
@@ -137,8 +206,8 @@
 					</a>
 				</p>
 				<p class="card-text">
-					{% blocktrans %}
-					Keep yourself updated with information about {{brand}} and all the associated services.
+					{% blocktrans trimmed %}
+					Keep yourself updated with information about {{ brand }} and all the associated services.
 					{% endblocktrans %}
 				</p>
 				<p class="card-text">
@@ -147,18 +216,16 @@
 					</a>
 				</p>
 				<p class="card-text">
-					{% blocktrans %}
-					Check the status of our servers.
-					{% endblocktrans %}
+					{% trans "Check the status of our servers." %}
 				</p>
 				<p class="card-text">
 					<a target="_blank" rel="noopener" href="https://wiki.aalto.fi/display/EDIT/Roadmap+2020-2024">
-						{% trans "Current Development" %}
+						{% trans "Current development" %}
 					</a>
 				</p>
 				<p class="card-text">
-					{% blocktrans %}
-					Follow the current development of {{brand}} and its related services.
+					{% blocktrans trimmed %}
+					Follow the current development of {{ brand }} and its related services.
 					{% endblocktrans %}
 				</p>
 			</div>
@@ -166,16 +233,16 @@
 
 		<div class="card frontpage">
 			<div class="card-body">
-				<h3>{% blocktrans %}Other servers that use {{brand}}{% endblocktrans %}</h3>
+				<h3>{% blocktrans trimmed %}Other servers that use {{ brand }}{% endblocktrans %}</h3>
 				<p class="card-text">
 					<a target="_blank" rel="noopener"
 						href="https://wiki.aalto.fi/display/EDIT/Exam+studio+exam+with+Aplus+exercises">
-						{% trans "Exam server" %}
+						{% trans "Exam server for the EXAM studio" %}
 					</a>
 				</p>
 				<p class="card-text">
-					{% blocktrans %}
-					Find out more about how to use {{brand}} to conduct examinations.
+					{% blocktrans trimmed %}
+					Find out more about how to use {{ brand }} to conduct examinations.
 					{% endblocktrans %}
 				</p>
 				<p class="card-text">
@@ -184,9 +251,9 @@
 					</a>
 				</p>
 				<p class="card-text">
-					{% blocktrans %}
-					If you are an Aalto teacher, you can make use of our testing environment to test your courses before
-					publish them in production.
+					{% blocktrans trimmed %}
+					Aalto teachers may use our testing environment to test courses before
+					publishing them in production.
 					{% endblocktrans %}
 				</p>
 			</div>
@@ -197,41 +264,51 @@
 				<h3>{% trans "Learning" %}</h3>
 				<p class="card-text">
 					<a target="_blank" rel="noopener" href="https://wiki.aalto.fi/display/EDIT/Accessible+Teaching">
-						{% trans "Accessible Teaching" %}
+						{% trans "Accessible teaching" %}
 					</a>
 				</p>
 				<p class="card-text">
-					{% blocktrans %}
-					Learn how to create accessible content for learners.
-					{% endblocktrans %}
+					{% trans "Learn how to create accessible content for learners." %}
 				</p>
 				<p class="card-text">
 					<a target="_blank" rel="noopener"
 						href="https://aalto.cloud.panopto.eu/Panopto/Pages/Sessions/List.aspx#folderID=%2253f1b55a-0cb3-4c71-8302-abbf00c1a6d2%22">
-						{% blocktrans %}
-						Watch some of our webinars.
-						{% endblocktrans %}
+						{% trans "Watch recordings of our webinars." %}
 					</a>
 				</p>
 				<p class="card-text">
-					{% blocktrans %}
-					The webinars contains some talks organized byt the EDIT team concerning A+ and its related services.
+					{% trans "The webinars contains some talks organized by the EDIT team concerning A+ and its related services." %}
+				</p>
+				<p class="card-text">
+					<a target="_blank" rel="noopener" href="https://www.youtube.com/watch?v=2DG4feWn_Ws">
+						{% trans "Introduction to A+ &mdash; ÄlyOppi webinar in Finnish" %}
+					</a>
+				</p>
+				<p class="card-text">
+					{% blocktrans trimmed %}
+					ÄlyOppi webinars are available at
+					<a target="_blank" rel="noopener" href="https://www.aalto.fi/en/aalto-university/alyoppi-past-webinars">
+						the project website
+					</a>.
 					{% endblocktrans %}
 				</p>
 			</div>
 		</div>
 	</div>
 </section>
-<section class="bg-gray text-center">
+<section class="text-center">
 	<div>
-		<img alt="decorative icon" class="img-responsive center-block" src="{% static 'images/search-clipart.png' %}" />
+		<img alt="" class="img-responsive center-block" src="{% static 'images/search-clipart.png' %}" />
 	</div>
 	<div>
 		<h3>{% trans "Can't find what you're looking for?" %}</h3>
-		<p>Send us an email to
-			<a href="mailto:aplusguru@cs.aalto.fi"target="_blank" rel="noopener">
-			aplusguru@cs.aalto.fi
+		<p>
+			{% blocktrans trimmed with email="aplusguru@cs.aalto.fi" %}
+			Send us an email to
+			<a href="mailto:{{ email }}" target="_blank" rel="noopener">
+				{{ email }}
 			</a>
+			{% endblocktrans %}
 		</p>
 	</div>
 </section>
