Modify actions when users respond to the prompt about lang settings
* If the user decides to continue browsing the course in a secondary
language. The only action we need to take is to redirect the user to a
new page that includes the secondary language query parameter in the
URL. We achieve this by using an <a> tag that contains the secondary
language query parameter in the href attribute.
* If the user decides to change the enrollment language, we must submit
a form with the new language, and then redirect the user to a page with
the new language query parameter.

--- a/course/templates/course/course_base.html
+++ b/course/templates/course/course_base.html
@@ -82,15 +82,14 @@
                     {% trans "You are browsing this course in a different language than is set in your preferences." %}
                     {% if user_course_data %}
                         <div class="button-container">
-                            <form action="{{ url_without_language }}">
-                                <button type="submit" class="aplus-button--secondary aplus-button--md">
-                                    {% blocktrans trimmed with lang=user_language|language_name_translated %}
-                                    Browse the course in {{ lang }}
-                                    {% endblocktrans %}
-                                </button>
-                            </form>
+                            <a href="{{ url_secondary_query_language }}" class="aplus-button--secondary aplus-button--md">
+                                {% blocktrans trimmed with lang=user_language|language_name_translated %}
+                                Browse the course in {{ lang }}
+                                {% endblocktrans %}
+                            </a>
                             <form action="{{ instance|url:'set-enrollment-language' }}" method="post">
                                 {% csrf_token %}
+                                <input name="next" type="hidden" value="{{ url_secondary_query_language }}" />
                                 <input name="language" type="hidden" value="{{ query_language }}" />
                                 <button type="submit" class="aplus-button--secondary aplus-button--md">
                                     {% blocktrans trimmed with lang=query_language|language_name_translated %}
