Use primary brand color in news panel

--- a/news/templates/news/user_news.html
+++ b/news/templates/news/user_news.html
@@ -3,7 +3,7 @@
 
 
 {% if news %}
-	<div class="panel panel-default news-panel">
+	<div class="panel panel-primary news-panel">
 		<div class="panel-heading">
 			<h3 class="panel-title">{% trans "Course news" %}</h3>
 		</div>
