--- a/assets/sass/legacy/_main.scss
+++ b/assets/sass/legacy/_main.scss
@@ -230,12 +230,6 @@ table.src tr td.src {
     background-color: #fff;
 }
 
-.news-panel .panel-heading {
-    color: #fff;
-    background-color: #337ab7;
-    border-color: #337ab7;
-}
-
 .news-panel .list-group-item-heading {
     padding-top: 5px;
     padding-bottom: 10px;
@@ -261,20 +255,25 @@ table.src tr td.src {
 }
 
 .news-panel .pinned-list-group-item {
-    border-left: 2px solid #337ab7;
+    border-left: 2px solid $aplus-brand-primary;
     border-bottom: 1px solid #ccc;
 }
 
 .news-panel .folding-list-group-item {
-    color: #337ab7;
     background-color: #fff;
     font-size: 16px;
     text-decoration: none;
     font-weight: bold;
+    border-bottom-left-radius: 0px;
+    border-bottom-right-radius: 0px;
+}
+
+.news-panel .folding-list-group-item.collapsed {
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
 }
 
 .news-panel .folding-list-group-item:hover {
-    color: #337ab7;
     background-color: #eee;
 }
 
