Allow editing teachers from course settings
Fixes #700

--- a/edit_course/templates/edit_course/edit_course_base.html
+++ b/edit_course/templates/edit_course/edit_course_base.html
@@ -21,6 +21,11 @@
                 {% trans "Instances" %}
             </a>
         </li>
+        <li role="presentation" class="menu-course-teachers">
+            <a href="{{ instance|url:'course-teachers' }}">
+                {% trans "Teachers" %}
+            </a>
+        </li>
         <li role="presentation" class="menu-course-details">
             <a href="{{ instance|url:'course-details' }}">
                 {% trans "Course" %}
