Add the missing navigation landmark in the edit course pages
The edit course navigation (tabs) must be identified as
a navigation landmark since the tab links are the main navigation
menu for the edit course section.

We have multiple navigation landmarks, thus each one requires
an ARIA label.

--- a/edit_course/templates/edit_course/edit_course_base.html
+++ b/edit_course/templates/edit_course/edit_course_base.html
@@ -15,6 +15,7 @@
 {% block columns %}
 <div class="col-md-12">
 
+    <nav aria-label="{% trans "Edit course" %}">
     <ul class="nav nav-tabs">
         <li role="presentation" class="menu-course-clone">
             <a href="{{ instance|url:'course-clone' }}">
@@ -62,6 +63,7 @@
             </a>
         </li>
     </ul>
+    </nav>
 
     {% block coursecontent %}{% endblock %}
 </div>
