Add missing navigation landmark roles and labels
Fixes #751

--- a/course/templates/course/course_base.html
+++ b/course/templates/course/course_base.html
@@ -122,7 +122,7 @@
         {% endif %}
         {% block siblings %}{% endblock %}
         {% block breadcrumb %}
-        <ol class="breadcrumb">
+        <ol class="breadcrumb" role="navigation" aria-label="{% trans "Breadcrumb" %}">
             {% block breadcrumblist %}
             <li><a href="{{ instance|url }}">{{ course.code }}</a></li>
             {% endblock %}
