--- a/exercise/templates/exercise/staff/analytics.html
+++ b/exercise/templates/exercise/staff/analytics.html
@@ -15,7 +15,7 @@
 <div class="col-md-12 llama-client">
 
   <div id="llama-unit-select">
-    <ul class="nav nav-tabs">
+    <ul class="nav nav-tabs" role="navigation" aria-label="{% trans "Module selection" %}">
       <li role="presentation" class="placeholder hidden">
         <a href="#"></a>
       </li>
@@ -26,7 +26,7 @@
   </div>
 
   <div id="llama-view-select">
-    <ul class="nav nav-tabs">
+    <ul class="nav nav-tabs" role="navigation" aria-label="{% trans "View selection" %}">
       <li role="presentation" class="active">
         <a href="#llama-view-progress">{% trans "Collective Progress" %}</a>
       </li>
