--- a/exercise/templates/exercise/staff/results.html
+++ b/exercise/templates/exercise/staff/results.html
@@ -145,7 +145,7 @@
 
 
 		<!--Navigation bar to choose how data is shown-->
-		<ul style="margin: 10px 0px 50px 0px;" id="exercise-nav-tabs" class="nav nav-tabs">
+		<ul style="margin: 10px 0px 50px 0px;" id="exercise-nav-tabs" class="nav nav-tabs" role="navigation" aria-label="{% trans "View selection" %}">
 			<li id="difficulty-exercises" role="presentation" class="active">
 				<a onclick="createPointTable('difficulty');" data-toggle="tab" href="#">{% trans "Show exercises by difficulty" %}</a>
 			</li>
@@ -201,7 +201,7 @@
 		</div>
 	</div>
 
- 
+
 	<!--Loading progress-->
 	<div class="row">
 		<div class="col-md-12">
