--- a/exercise/templates/exercise/exercise_plain.html
+++ b/exercise/templates/exercise/exercise_plain.html
@@ -50,7 +50,7 @@
                     {% include 'exercise/_exercisecollection.html' %}
 
                 {% elif exercise.is_submittable %}
-                    <nav class="exercise-summary navbar navbar-default">
+                    <nav class="exercise-summary navbar navbar-default" aria-label="{{ exercise|parse_localization }}">
                         <ul class="nav navbar-nav exercise-nav">
                             <li>
                                 <a href="{% if summary.get_best_submission %}{{ summary.get_best_submission|url:'submission-plain' }}{% else %}#{% endif %}">
