Do not add role="navigation" to list elements
The navigation role should be added to an element that wraps the list,
instead of the list itself.
https://stackoverflow.com/questions/14180785/html5-nav-element-vs-role-navigation

--- a/course/templates/course/course_base.html
+++ b/course/templates/course/course_base.html
@@ -122,11 +122,13 @@
         {% endif %}
         {% block siblings %}{% endblock %}
         {% block breadcrumb %}
-        <ol class="breadcrumb" role="navigation" aria-label="{% trans "Breadcrumb" %}">
-            {% block breadcrumblist %}
-            <li><a href="{{ instance|url }}">{{ course.code }}</a></li>
-            {% endblock %}
-        </ol>
+        <div role="navigation" aria-label="{% trans "Breadcrumb" %}">
+            <ol class="breadcrumb" role="navigation" aria-label="{% trans "Breadcrumb" %}">
+                {% block breadcrumblist %}
+                <li><a href="{{ instance|url }}">{{ course.code }}</a></li>
+                {% endblock %}
+            </ol>
+        </div>
         {% endblock %}
         <main class="row">
             {% block columns %}
