--- a/exercise/templates/exercise/staff/analytics.html
+++ b/exercise/templates/exercise/staff/analytics.html
@@ -14,8 +14,8 @@
 {% block columns %}
 <div class="col-md-12 llama-client">
 
-  <div id="llama-unit-select">
-    <ul class="nav nav-tabs" role="navigation" aria-label="{% trans "Module selection" %}">
+  <div id="llama-unit-select" role="navigation" aria-label="{% trans "Module selection" %}">
+    <ul class="nav nav-tabs">
       <li role="presentation" class="placeholder hidden">
         <a href="#"></a>
       </li>
@@ -25,8 +25,8 @@
     </ul>
   </div>
 
-  <div id="llama-view-select">
-    <ul class="nav nav-tabs" role="navigation" aria-label="{% trans "View selection" %}">
+  <div id="llama-view-select" role="navigation" aria-label="{% trans "View selection" %}">
+    <ul class="nav nav-tabs">
       <li role="presentation" class="active">
         <a href="#llama-view-progress">{% trans "Collective Progress" %}</a>
       </li>
