Add styles for the kbd elements

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -54,6 +54,7 @@ $font-size-base:  $aplus-font-size-base;
 /*!
  * A+ Styles
  */
+@import 'base/general';
 @import 'layout/base';
 @import 'layout/header';
 @import 'layout/footer';
