Display exercise submission times with seconds.
This change helps teachers in situations where a student claims that
they consumed submissions by accident, and request extra submissions.

Fixes #685

--- a/exercise/templates/exercise/_submission_info.html
+++ b/exercise/templates/exercise/_submission_info.html
@@ -10,7 +10,7 @@
     <div class="panel-body">
         <dl>
             <dt>{% trans "Submitted on" %}</dt>
-            <dd>{{ submission.submission_time }}</dd>
+            <dd>{{ submission.submission_time|date:'DATETIME_SECONDS_FORMAT' }}</dd>
 
             <dt>{% trans "Status" %}</dt>
             <dd>
