--- a/exercise/templates/exercise/exercise_base.html
+++ b/exercise/templates/exercise/exercise_base.html
@@ -52,7 +52,7 @@
               <li>
                   <a href="{{ submission|url }}">
                       {{ forloop.revcounter }}.
-                      {{ submission.submission_time }}
+                      {{ submission.submission_time|date:'DATETIME_SECONDS_FORMAT' }}
                       {% points_badge submission %}
                   </a>
               </li>
