--- a/exercise/templates/exercise/submission_plain.html
+++ b/exercise/templates/exercise/submission_plain.html
@@ -41,7 +41,7 @@
 			</tr>
 			<tr>
 				<td>
-					{{ submission.submission_time }}
+					{{ submission.submission_time|date:'DATETIME_SECONDS_FORMAT' }}
 					{% if submission.late_penalty_applied %}
 					<span class="label label-warning">
 						{% blocktrans with percent=submission.late_penalty_applied|percent %}
