Add options for selecting the data to be cloned
When cloning a course instance, the user can now select what data will
be includedin the clone: assistants, user tags, categories, modules,
chapters, exercises and menu items. The selection is done using check
boxes that appear in the "clone course" form.

Fixes #755

--- a/edit_course/templates/edit_course/clone_instance.html
+++ b/edit_course/templates/edit_course/clone_instance.html
@@ -42,7 +42,7 @@
     <legend>{% trans "Clone course" %}</legend>
     <p>
         {% blocktrans %}
-        This action will clone all course modules and exercises into a new instance.
+        This action will clone the course and the selected data into a new instance.
         {% endblocktrans %}
     </p>
     {{ form|bootstrap }}
