Highlight the selected option in questionnaires
This commit highlights the currently selected option in checkbox/radio
button exercises using a light blue rounded rectangle. The rectangle
appears underneath the currently focused option, and "pops out" slightly
at the time of selection, appearing as a subtle animation. This helps
users notice if they have accidentally selected an option while
scrolling through the exercise.

Fixes #53

Highlight all selected options, bold

Related to #53

--- a/assets/sass/protocols/_quiz1.scss
+++ b/assets/sass/protocols/_quiz1.scss
@@ -4,6 +4,8 @@
 
 /* Questionnaire uses also error-summary-class from "components/error_summary" */
 
+$questionnaire-focus-bg: #bce8f1;
+
 .exercise .aplus-quiz1 {
 	.question-area {
 		margin-top: 20px;
@@ -71,6 +73,29 @@
 
 		&:before {
 			content: "\e014";
+		}
+	}
+
+	/* Highlight the selected option with a background rectangle, and enlarge it on click */
+	.checkbox,
+	.radio {
+		label {
+			input + span {
+				border-radius: 1px;
+				margin-left: 5px;
+			}
+
+			input:checked + span {
+				background-color: $questionnaire-focus-bg;
+				box-shadow: 0 0 0 3px $questionnaire-focus-bg;
+				font-weight: bold;
+			}
+
+			&:active input + span {
+				background-color: $questionnaire-focus-bg;
+				box-shadow: 0 0 0 6px $questionnaire-focus-bg;
+				font-weight: bold;
+			}
 		}
 	}
 }
